plugins {
  id 'application'
}

group 'pl.boringstuff'
version '1.0.0'

repositories {
  mavenCentral()
}

java {
  sourceCompatibility = JavaVersion.VERSION_15
  targetCompatibility = JavaVersion.VERSION_15
}

tasks.withType(JavaCompile).each {
  it.options.compilerArgs.add('--enable-preview')
}
tasks.withType(JavaExec) {
  jvmArgs += '--enable-preview'
}

application {
  mainClass = 'pl.boringstuff.ConsoleAppRunner'
}

run.with {
  it.args(getOrDefault("dateFrom"), getOrDefault("resultDir"), getOrDefault("repoPath"), getOrDefault("reportFormat"))
}

String getOrDefault(String name) {
  if (project.hasProperty(name)) {
    return "$name=${project.getProperty(name)}"
  }
  ""
}

dependencies {
  compile group: 'org.apache.commons', name: 'commons-csv', version: '1.8'
  compile group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
  compile group: 'org.freemarker', name: 'freemarker', version: '2.3.30'
}
